SAK-25837 fixed up the build so site reporting can actually work, also fixed a few dependency issues
git-svn-id: https://source.sakaiproject.org/svn/master/trunk@307859 66ffb92e-73f9-0310-93c1-f5514f145a0a